force-app/main/default/objects/Conexion__c/Conexion__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Parametros de conexión al Servicio Web</description>
    <label>Conexion</label>
</CustomObject>