force-app/main/default/objects/Conexion__c/fields/Contrasena__c.field-meta.xml
<CustomField>
    <fullName>Contrasena__c</fullName>
    <label>Contraseña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>